[MODIFIED] Background image to be a pseudo element of the body as opposed to its own div block. Thinking this will fix the issues with it on mobile.

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -56,7 +56,8 @@ body {
     border: 0;
 }
 
-#background-image {
+body::before {
+    content: "";
     min-width: 100%;
     min-height: 100%;
     position: fixed;
@@ -68,13 +69,6 @@ body {
     -o-background-size: cover;
     background-size: cover;
     z-index: -100;
-}
-
-#background-image::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100vh;
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
 }
